objects/Quality_Control_Log__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Status_Changed__c</fullName>
        <label>Date Status Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Edited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Edited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Control_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Control_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Quality Control Logs</relationshipLabel>
        <relationshipName>Quality_Control_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Status__c</fullName>
        <label>Prior Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Submit_Updated_Date_Time__c</fullName>
        <label>Quality Control Submit/Updated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Control Log</label>
    <nameField>
        <displayFormat>QC-{000000}</displayFormat>
        <label>Quality Control Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Control Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>